dashboard_ingress/dashboard_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: dashboard
  namespace: kube-system
spec:  
  rules:  
  - host: dashboard.10.20.206.60.nip.io
    http:      
      paths:      
        - path: /
          pathType: Prefix
          backend:          
            service: 
              name: kubernetes-dashboard
              port: 
                number: 443
